--- a/index.html
+++ b/index.html
@@ -35,6 +35,43 @@
             </div>
         </div>
     </nav>
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="./assets/profile-pic.png" alt="'Yahir Ramos Perez profile picture">
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello, I'm</p>
+            <h1 class="title">Yahir Ramos Perez</h1>
+            <p class="section__text__p2">FrontEnd Developer</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/Yahir-Resume.pdf')">Download CV</button>
+                    <button class="btn btn-color-1" onclick="location.href='./#contact'"> Contact Info</button>
+            </div>
+            <div id="social-container">
+                <img src="./assets/linkedin.png" alt="My LinkedIn Profile"
+                class="icon" onclick="location.href = 'https://www.linkedin.com/in/yahir-ramos-perez/'">
+
+                <img src="./assets/github.png" alt="My GitHub Profile"
+                class="icon" onclick="location.href = 'https://github.com/Yahir530'">
+            </div>
+        </div>
+    </section>
+    <section id="about">
+        <p class="section__text__p1">Get to Know More</p>
+        <h1 class="title">About Me</p>
+            <div class="section-container">
+                <div class="section__pic-container">
+                    <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic">
+                </div>
+                <div class="about-details-container">
+                    <div class="about-containers">
+                        <div class="details-container">
+                            <img src="./assets/experience.png" alt="Experience icon" class="icon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
 <script src="script.js"></script>
 </body>
 </html> 
