--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.png" alt="'Yahir Ramos Perez profile picture">
+            <img src="./assets/profile.jpeg" alt="'Yahir Ramos Perez profile picture" class="profile-pics">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -61,23 +61,25 @@
         <h1 class="title">About Me</p>
             <div class="section-container">
                 <div class="section__pic-container">
-                    <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic">
+                    <img src="./assets/profilepick.jpg" alt="Profile picture" class="about-pic">
                 </div>
                 <div class="about-details-container">
                     <div class="about-containers">
                         <div class="details-container">
                             <img src="./assets/experience.png" alt="Experience icon" class="icon">
                             <h3>Experience</h3>
-                            <p>2+ years <br />FrontEnd Development</p>
+                            <p>1 year <br />FrontEnd Development</p>
                         </div>
                         <div class="details-container">
                             <img src="./assets/education.png" alt="Education icon" class="icon">
                             <h3>Education</h3>
-                            <p>B.S. Computer Science <br/></p>
+                            <p>B.S. Computer Science<br/></p>
                         </div>
                     </div>
                     <div class="text-container">
-                        <p>Here you need to add text!!!!</p>
+                        <p>Hello, I am Yahir Ramos Perez and am pursuing a degree in Computer Science at California State University, Sacramento. I am a Senior at Sacramento State and created this website with the intention of
+                            learning HTML, CSS, and JavaScript. My main focus is to learn and keep learning different types of FrontEndand BackEnd frameworks in order to hopefully become a FullStack developer.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -193,11 +195,11 @@
             <div class="about-containers">
             <div class="details-container color-container">
                 <div class="article-container">
-                    <img src="./assets/project-1.png" alt="Project 1" class="project-img"> 
+                    <img src="./assets/maxresdefault.jpg" alt="Project 1" class="project-img"> 
                 </div>
-                <h2 class="expereince-sub-title project-title">Project One</h2>
+                <h2 class="expereince-sub-title project-title">Personal Website</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com/'">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Yahir530/Personal-Website'">
                         Github
                     </button>
                     <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com/'">
